<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">About</string>
    <string name="app_desc_label">Introduction</string>
    <string name="app_version">Version %s</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="support_ad">Support&#038;AD</string>
    <string name="version_note">Version Notes</string>
    <string name="error_share">Sorry!Failed to invoke sharing function on your device.</string>
    <string name="error_send_mail">Sorry!Failed to invoke mailing function on your device.</string>
    <string name="praise">Praise</string>
    <string name="choose_channel">Choose the app store:</string>
    <string name="mi_store">XiaoMi app store</string>
    <string name="bd_store">BaiDu app store</string>
    <string name="error_open_browser">Sorry!Failed to open the browser on your device.</string>
</resources>
