<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawablePadding="5dp"
        android:drawableTop="@mipmap/ic_launcher"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/aboutItemPadding"
        android:text="@string/app_name"
        android:textColor="@color/col_b3000000"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvAppDesc"
        style="@style/AboutActionStyle"
        android:drawableLeft="@drawable/svg_introduction_wrapper"
        android:text="@string/app_desc_label"/>

    <TextView
        android:id="@+id/tvAppDescDetail"
        style="@style/DetailDescStyle"/>

    <include layout="@layout/layout_about_separator"/>

    <TextView
        android:id="@+id/tvVersion"
        style="@style/AboutActionStyle"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/svg_version_wrapper"
        android:text="@string/app_version"/>

    <include layout="@layout/layout_about_separator"/>

    <TextView
        android:id="@+id/tvVersionNote"
        style="@style/AboutActionStyle"
        android:drawableLeft="@drawable/svg_version_note_wrapper"
        android:text="@string/version_note"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvVersionNoteDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="never"
        android:paddingBottom="@dimen/aboutItemPadding"
        android:visibility="gone"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    <include layout="@layout/layout_about_separator"/>

    <TextView
        android:id="@+id/tvFaq"
        style="@style/AboutActionStyle"
        android:drawableLeft="@drawable/svg_faq_wrapper"
        android:text="@string/faq"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvFaqDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="never"
        android:paddingBottom="@dimen/aboutItemPadding"
        android:visibility="gone"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    <include layout="@layout/layout_about_separator"/>

    <TextView
        android:id="@+id/tvFeedback"
        style="@style/AboutActionStyle"
        android:drawableLeft="@drawable/svg_feedback_wrapper"
        android:text="@string/feedback"/>

    <include layout="@layout/layout_about_separator"/>

    <TextView
        android:id="@+id/tvPraise"
        style="@style/AboutActionStyle"
        android:drawableLeft="@drawable/svg_praise_wrapper"
        android:text="@string/praise"/>

    <include layout="@layout/layout_about_separator"/>

    <TextView
        android:id="@+id/tvShare"
        style="@style/AboutActionStyle"
        android:drawableLeft="@drawable/svg_share_wrapper"
        android:text="@string/share"/>

    <include layout="@layout/layout_about_separator"/>

    <TextView
        android:id="@+id/tvSupport"
        style="@style/AboutActionStyle"
        android:drawableLeft="@drawable/svg_support_wrapper"
        android:text="@string/support_ad"/>
</LinearLayout>